--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "bsodapi",
+  "description": "Simple api to generate some blue screen of death :)",
   "version": "0.0.1",
-  "private": true,
+  "homepage": "http://bsodapi.herokuapp.com/",
   "scripts": {
     "start": "node app"
   },
@@ -14,5 +15,29 @@
     "grunt-develop": "~0.1.1",
     "grunt-contrib-watch": "~0.4.4",
     "request": "~2.22.0"
-  }
+  },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.2.x"
+  },
+  "keywords": [
+    "bsod",
+    "blue screen",
+    "error"
+  ],
+  "bugs": {
+    "web": "https://github.com/GabLeRoux/bsodapi/issues"
+  },
+  "repositories": [
+    {
+      "type": "git",
+      "url": "https://github.com/GabLeRoux/bsodapi.git"
+    }
+  ],
+  "licenses": [
+    {
+      "name": "wtfpl",
+      "url": "http://www.wtfpl.net/txt/copying/"
+    }
+  ]
 }
